{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 238,
  "lineage": "c7e6723f-9484-a95f-ed3e-d1ffbc742cca",
  "resources": [
    {
      "module": "module.ec2_agent",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1f5949e0976876d",
            "arn": "arn:aws:ec2:eu-north-1:802026442401:elastic-ip/eipalloc-0a1f5949e0976876d",
            "association_id": "eipassoc-01cf515f584183203",
            "domain": "vpc",
            "id": "eipalloc-0a1f5949e0976876d",
            "instance": "i-0b819511980fc67f5",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-00b20efe62949e745",
            "private_dns": "ip-10-0-1-38.eu-north-1.compute.internal",
            "private_ip": "10.0.1.38",
            "public_dns": "ec2-51-21-136-150.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.136.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "christian-lime-ai-dev-ec2-eip"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-ec2-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_agent.aws_iam_instance_profile.this",
            "module.ec2_agent.aws_iam_role.this",
            "module.ec2_agent.aws_instance.this",
            "module.ec2_agent.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_agent",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0079daae53604f8b6",
            "arn": "arn:aws:ec2:eu-north-1:802026442401:instance/i-0b819511980fc67f5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "christian-lime-ai-dev-ec2-agent-profile",
            "id": "i-0b819511980fc67f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g6.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "christian-ec2-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b20efe62949e745",
            "private_dns": "ip-10-0-1-38.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.38",
            "public_dns": "ec2-51-21-136-150.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.136.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0faf9760e1328dc13",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b12412b15585f8a4",
            "tags": {
              "Name": "christian-lime-ai-dev-ec2-agent-instance"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-ec2-agent-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b891d7678cfd6c3"
            ]
          },
          "dependencies": [
            "module.ec2_agent.aws_iam_instance_profile.this",
            "module.ec2_agent.aws_iam_role.this",
            "module.ec2_agent.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_agent",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:security-group/sg-07b891d7678cfd6c3",
            "description": "EC2 agent security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b891d7678cfd6c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "christian-lime-ai-dev-ec2-security-group",
            "name_prefix": "",
            "owner_id": "802026442401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "christian-lime-ai-dev-ec2-security-group"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:security-group/sg-08958908049ba64b9",
            "description": "ECS service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08958908049ba64b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "christian-lime-ai-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "802026442401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "christian-lime-ai-dev-ecs-sg"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:security-group/sg-05f2b0237435fb270",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f2b0237435fb270",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EC2 agent to connect to DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b891d7678cfd6c3"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow ECS backend to connect to DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08958908049ba64b9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "christian-lime-ai-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "802026442401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "christian-lime-ai-dev-rds-sg"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_agent.aws_security_group.this",
            "module.ecs_backend.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:internet-gateway/igw-05a55def44373508c",
            "id": "igw-05a55def44373508c",
            "owner_id": "802026442401",
            "tags": {
              "Name": "christian-lime-ai-dev-igw"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-igw"
            },
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:route-table/rtb-0e89b96c68b714d7c",
            "id": "rtb-0e89b96c68b714d7c",
            "owner_id": "802026442401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a55def44373508c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "christian-lime-ai-dev-public-rt"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5abf256c985fca4",
            "route_table_id": "rtb-0e89b96c68b714d7c",
            "subnet_id": "subnet-0b12412b15585f8a4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a8f601d7d76632",
            "route_table_id": "rtb-0e89b96c68b714d7c",
            "subnet_id": "subnet-0e55b6f622da7d98c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:subnet/subnet-0abd894058b99c233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abd894058b99c233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802026442401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "christian-lime-ai-dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-private-subnet-1"
            },
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:subnet/subnet-0777b84aba667721e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0777b84aba667721e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802026442401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "christian-lime-ai-dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-private-subnet-2"
            },
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:subnet/subnet-0b12412b15585f8a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12412b15585f8a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802026442401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "christian-lime-ai-dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-public-subnet-1"
            },
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:subnet/subnet-0e55b6f622da7d98c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e55b6f622da7d98c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802026442401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "christian-lime-ai-dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-public-subnet-2"
            },
            "vpc_id": "vpc-07793adfe8120b702"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:802026442401:vpc/vpc-07793adfe8120b702",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f22cd560f7a546a",
            "default_route_table_id": "rtb-04cbfbe22757f78e6",
            "default_security_group_id": "sg-01ccda685bebc82ee",
            "dhcp_options_id": "dopt-097a192df7c8c8b1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07793adfe8120b702",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cbfbe22757f78e6",
            "owner_id": "802026442401",
            "tags": {
              "Name": "christian-lime-ai-dev-vpc"
            },
            "tags_all": {
              "Name": "christian-lime-ai-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}